--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,4 +50,4 @@ jobs:
           external-data-json-path: ./cache/benchmark-data.json
           fail-on-alert: true
           comment-on-alert: true
-          github-token: ${{ secrets.CODECOV_TOKEN }}
+          github-token: ${{ secrets.ACTIONS_TOKEN }}
